--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
       <span class="small">by <a href="http://github.com/diva">diva</a></span></h1>
 
     <div class="description">
-      Secure HyperGrid extensions for OpenSim-based worlds
+      Secure client for <a href="http://github.com/diva/Grider">OpenSim</a>'s 
+      <a href="http://diva.github.com/opensim/">HyperGrid</a>, 
+      based on <a href="http://www.openmetaverse.org/projects/libopenmetaverse">LibOMV<a>'s GridProxy.
     </div>
 
     <h2>License</h2>
