Fixes wrong URL for opensim

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <span class="small">by <a href="http://github.com/diva">diva</a></span></h1>
 
     <div class="description">
-      Secure client for <a href="http://github.com/diva/Grider">OpenSim</a>'s 
+      Secure client for <a href="http://opensimulator.org">OpenSim</a>'s 
       <a href="http://diva.github.com/opensim/">HyperGrid</a>, 
       based on <a href="http://www.openmetaverse.org/projects/libopenmetaverse">LibOMV<a>'s GridProxy.
     </div>
