--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
 <p>Diva Canto (diva_atdomain_metaverseink.com)
 <br/>      </p>
 
+<h2>Sources and Packages</h2>
+<p>Browse the source code, get tagged releases, see history, and more at 
+<a href="http://github.com/diva/Grider">diva/Grider</a>.
+</p>
 
     <h2>Download</h2>
     <p>
