Added link to bin zip as primary download

--- a/index.html
+++ b/index.html
@@ -40,13 +40,11 @@
   <div id="container">
 
     <div class="download">
-      <a href="http://github.com/diva/Grider/zipball/master">
+      <a href="http://cloud.github.com/downloads/diva/Grider/Grider-0-1.zip">
         <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/diva/Grider/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-      
+     
     <h1><a href="http://github.com/diva/Grider">Grider</a> 
       <span class="small">by <a href="http://github.com/diva">diva</a></span></h1>
 
@@ -72,8 +70,10 @@
     <h2>Download</h2>
     <p>
       You can download this project in either
-      <a href="http://github.com/diva/Grider/zipball/master">zip</a> or
-      <a href="http://github.com/diva/Grider/tarball/master">tar</a> formats.
+      <a href="http://cloud.github.com/downloads/diva/Grider/Grider-0-1.zip">zip,
+      dlls and exe only</a> or
+      <a href="http://github.com/diva/Grider/zipball/master">zip, entire project</a> or
+      <a href="http://github.com/diva/Grider/tarball/master">tar, entire project</a> formats.
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
 
