--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 
     <h2>Download</h2>
     <p>
-      You can download this project in either</br>
+      You can download this project in either<br>
       <a href="http://cloud.github.com/downloads/diva/Grider/Grider-0-1.zip">zip,
-      dlls and exe only</a></br>
-      <a href="http://github.com/diva/Grider/zipball/master">zip, entire project</a></br>
+      dlls and exe only</a><br>
+      <a href="http://github.com/diva/Grider/zipball/master">zip, entire project</a><br>
       <a href="http://github.com/diva/Grider/tarball/master">tar, entire project</a> formats.
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
